--- a/src/components/ErrorModal/errorModal.css
+++ b/src/components/ErrorModal/errorModal.css
@@ -6,6 +6,8 @@
     right: 0;
     height: 100vh;
     background-color: black;
+    width: 100%;
+    height: 100%;
 }
 
 #messageBody p {
@@ -20,4 +22,5 @@
 
     color: rgba(255, 0, 119, 0.712);
     font-size: 36px;
+    text-align: center;
 }
